--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,11 +39,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^3.1.2
   splash: ^1.1.0
+ 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
